--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </div>
   </section><!-- End Hero -->
 
-  <main id="main">
+  <main id="main" style="background-color: #181925;">
 
     <body class="contra-capa">
     <div class="top">
@@ -112,12 +112,17 @@
           <h2>QUEM SOU EU?</h2>
           <p>Uma menina bem chata, mas estudiosa e o kayky é o melhor :)</p>
         </div>
-
         <div class="row">
           <div class="image col-lg-4 d-flex align-items-stretch justify-content-center justify-content-lg-start"></div>
           <div class="col-lg-8 d-flex flex-column align-items-stretch">
             <div class="content ps-lg-4 d-flex flex-column justify-content-center">
-          
+              <p>Robert McCall, agente especializado que trabalhava para o governo americano e 
+                depois começou a lutar pelos oprimidos, vive agora no sul de Itália, longe dos Estados Unidos. Rapidamente faz novos amigos, mas começa a ver que a máfia controla inúmeros aspectos das suas vidas. É então que decide tornar-se, como fazia na sua terra natal,
+                um vigilante que defronta a poderosa organização criminosa. Este é o terceiro filme de acção da saga “The Equalizer”, realizada por Antoine Fuqua, que é uma adaptação livre da série homónima de televisão dos anos 1980 – uma saga que entretanto voltou também ao pequeno ecrã, com Queen Latifah.
+                Conta, como os outros, com Denzel Washington no centro de tudo, à frente de um elenco que inclui Dakota Fanning, David Denman e Eugenio Mastrandrea. PÚBLICO
+              </p>
+            </div>
+          </div>
                
     </section><!-- End About Me Section -->
 
