atualização de abas

--- a/quemsoueu/quemsou.html
+++ b/quemsoueu/quemsou.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Ana Babona</title>
+  <title>Laura Bootstrap Template - Index</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -67,39 +67,40 @@
 
   </header><!-- End Header -->
 
-  
-
-  <!-- ======= Hero Section ======= -->
-  <section id="hero">
-    <div class="hero-container">
-      <h1>Ana Clara Ribeiro</h1>
-      <h2>PORTFOLIO 2023</h2>
-      <a href="#main" class="btn-scroll scrollto" title="Scroll Down"><i class="bx bx-chevron-down"></i></a>
-    </div>
-  </section><!-- End Hero -->
 
   <main id="main" style="background-color: #181925;">
 
-    <body class="contra-capa">
-    <div class="top">
-      <div class="logos">
-      <img class="logo-etec" src="assets/img/etec_ra_baixada_santista_guaruja_alberto_santos_dumont_cor.png">
-      <img class="logo-cps" src="assets/img/logo_cps_versao_cor.png" alt="">
-      <img class="logo-govsp" src="assets/img/governosp.png" alt="">
-    </div>
-      <hr>
-      <p><b>CENTRO PAULA SOUZA</b></p>
-      <p><b>ETEC – ESCOLA TÉCNICA ESTADUAL ALBERTO SANTOS DUMONT – GUARUJÁ – SP.</b></p>
-      <p><b>ALUNO: ANA CLARA RIBEIRO – 2º ANO C</b></p>
-    </div>
-      <p class="materia"><b>PORTFÓLIO DE LÍNGUA PORTUGUESA E LITERATURA</b></p>
-      <p class="direita"><b>Portfólio Escolar apresentado à disciplina de Língua Portuguesa e Literatura, ministrada pela professora Edenise Rosa para obtenção parcial de menção em Língua Portuguesa e Literatura – Ensino médio - da Etec Alberto Santos Dumont.</b></p>
-      <p class="center"><b>Guarujá – SP.</b></p>
-      <p class="center"><b>2023</b></p>
-  </body>
 
-  </main><!-- End #main -->
+    <!-- ======= About Me Section ======= -->
+    <section id="about" class="about">
+      <div class="container">
 
+        <div class="section-title">
+          <!--TÍTULO-->
+          <span>QUEM SOU EU?</span>
+          <h2>QUEM SOU EU?</h2>
+          <!--ATÉ AQUI-->
+
+          <!--sub-titulo-->
+          <p>Uma menina bem chata, mas estudiosa e o kayky é o melhor :)</p>
+        </div>
+        <div class="row">
+          <div class="image col-lg-4 d-flex align-items-stretch justify-content-center justify-content-lg-start"></div>
+          <div class="col-lg-8 d-flex flex-column align-items-stretch">
+            <div class="content ps-lg-4 d-flex flex-column justify-content-center">
+              <!--AQUI É ONDE VC COLOCA O TEXTO-->
+              <p>Robert McCall, agente especializado que trabalhava para o governo americano e 
+                depois começou a lutar pelos oprimidos, vive agora no sul de Itália, longe dos Estados Unidos. Rapidamente faz novos amigos, mas começa a ver que a máfia controla inúmeros aspectos das suas vidas. É então que decide tornar-se, como fazia na sua terra natal,
+                um vigilante que defronta a poderosa organização criminosa. Este é o terceiro filme de acção da saga “The Equalizer”, realizada por Antoine Fuqua, que é uma adaptação livre da série homónima de televisão dos anos 1980 – uma saga que entretanto voltou também ao pequeno ecrã, com Queen Latifah.
+                Conta, como os outros, com Denzel Washington no centro de tudo, à frente de um elenco que inclui Dakota Fanning, David Denman e Eugenio Mastrandrea. PÚBLICO
+              </p>
+              <!--AQUI É ONDE ACABA O LUGAR DE COLOCAR O TEXTO-->
+            </div>
+          </div>
+               
+    </section><!-- End About Me Section -->
+
+  <!-- ======= rodape ======= -->
   <!-- ======= rodape ======= -->
   <footer id="footer">
     <div class="container">
