atualização de abas2

--- a/medos.html
+++ b/medos.html
@@ -36,9 +36,8 @@
 </head>
 
 <body>
-
-  <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top d-flex justify-content-center align-items-center header-transparent">
+<!-- ======= Header ======= -->
+<header id="header" class="fixed-top d-flex justify-content-center align-items-center header-transparent">
 
     <nav id="navbar" class="navbar">
       <ul>
@@ -47,11 +46,12 @@
           <ul>
             <li><a href="sonhos.html">SONHOS</a></li>
             <li><a href="medos.html">MEDOS</a></li>
+            <li><a href="meusmomentosefrases.html">MEUS MOMENTOS</a></li>
             <li class="dropdown"><a href="musica.html"><span>MUSICAS FAVS</span> <i class="bi bi-chevron-right"></i></a>
               <ul>
-                <li><a href="#">Drop Down 2</a></li>
-                <li><a href="#">Drop Down 3</a></li>
-                <li><a href="#">Drop Down 4</a></li>
+                <li><a href="#musica1">musica 1</a></li>
+                <li><a href="#musica2">musica 2</a></li>
+                <li><a href="#musica3">musica 3</a></li>
               </ul>
           </ul>
         </li>
@@ -67,20 +67,24 @@
 
   </header><!-- End Header -->
 
+  
+
+  
 
   <main id="main" style="background-color: #181925;">
 
+          </div>
 
-    <!-- ======= About Me Section ======= -->
-    <section id="about" class="about">
+
+        <!-- ======= MEDOS SECTION ======= -->
+    <section id="medo" class="medo">
       <div class="container">
 
-        <div class="section-title">
-          <!--TÍTULO-->
-          <span>MEUS MOMENTOS E FRASES</span>
-          <h2>MEUS MOMENTOS E FRASES</h2>
-          <!--ATÉ AQUI-->
 
+        <div class="section-title">
+          <!--titulo-->
+          <span>MEDOS</span>
+          <h2>MEDOS</h2>
           <!--sub-titulo-->
           <p>Uma menina bem chata, mas estudiosa e o kayky é o melhor :)</p>
         </div>
@@ -97,29 +101,27 @@
               <!--AQUI É ONDE ACABA O LUGAR DE COLOCAR O TEXTO-->
             </div>
           </div>
-               
-    </section><!-- End About Me Section -->
+  </main><!-- End #main -->
 
-  <!-- ======= rodape ======= -->
-  <!-- ======= rodape ======= -->
-  <footer id="footer">
-    <div class="container">
-      <h3>Ana Clara Ribeiro</h3>
-      <p>Uma menina muito chata.</p>
-      <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-      </div>
-      <div class="copyright">
-        &copy; Copyright <strong><span>Kayky</span></strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        Designed by <a>KaykyLindo</a>
-      </div>
+ <!-- ======= rodape ======= -->
+ <footer id="footer">
+  <div class="container">
+    <h3>Ana Clara Ribeiro</h3>
+    <p>Uma menina muito chata.</p>
+    <div class="social-links">
+      <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+      <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+      <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+      <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
     </div>
-  </footer><!-- End Footer -->
+    <div class="copyright">
+      &copy; Copyright <strong><span>Kayky</span></strong>. All Rights Reserved
+    </div>
+    <div class="credits">
+      Designed by <a>KaykyLindo</a>
+    </div>
+  </div>
+</footer><!-- End Footer -->
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
