--- a/meusmomentosefrases.html
+++ b/meusmomentosefrases.html
@@ -47,11 +47,12 @@
           <ul>
             <li><a href="sonhos.html">SONHOS</a></li>
             <li><a href="medos.html">MEDOS</a></li>
+            <li><a href="meusmomentosefrases.html">MEUS MOMENTOS</a></li>
             <li class="dropdown"><a href="musica.html"><span>MUSICAS FAVS</span> <i class="bi bi-chevron-right"></i></a>
               <ul>
-                <li><a href="#">Drop Down 2</a></li>
-                <li><a href="#">Drop Down 3</a></li>
-                <li><a href="#">Drop Down 4</a></li>
+                <li><a href="#musica1">musica 1</a></li>
+                <li><a href="#musica2">musica 2</a></li>
+                <li><a href="#musica3">musica 3</a></li>
               </ul>
           </ul>
         </li>
@@ -77,8 +78,8 @@
 
         <div class="section-title">
           <!--TÍTULO-->
-          <span>QUEM SOU EU?</span>
-          <h2>QUEM SOU EU?</h2>
+          <span>MEUS MOMENTOS E FRASES</span>
+          <h2>MEUS MOMENTOS E FRASES</h2>
           <!--ATÉ AQUI-->
 
           <!--sub-titulo-->
