--- a/musica.html
+++ b/musica.html
@@ -47,6 +47,7 @@
           <ul>
             <li><a href="sonhos.html">SONHOS</a></li>
             <li><a href="medos.html">MEDOS</a></li>
+            <li><a href="meusmomentosefrases.html">MEUS MOMENTOS</a></li>
             <li class="dropdown"><a href="musica.html"><span>MUSICAS FAVS</span> <i class="bi bi-chevron-right"></i></a>
               <ul>
                 <li><a href="#musica1">musica 1</a></li>
