--- a/quemsou.html
+++ b/quemsou.html
@@ -47,11 +47,12 @@
           <ul>
             <li><a href="sonhos.html">SONHOS</a></li>
             <li><a href="medos.html">MEDOS</a></li>
+            <li><a href="meusmomentosefrases.html">MEUS MOMENTOS</a></li>
             <li class="dropdown"><a href="musica.html"><span>MUSICAS FAVS</span> <i class="bi bi-chevron-right"></i></a>
               <ul>
-                <li><a href="#">Drop Down 2</a></li>
-                <li><a href="#">Drop Down 3</a></li>
-                <li><a href="#">Drop Down 4</a></li>
+                <li><a href="#musica1">musica 1</a></li>
+                <li><a href="#musica2">musica 2</a></li>
+                <li><a href="#musica3">musica 3</a></li>
               </ul>
           </ul>
         </li>
@@ -67,17 +68,19 @@
 
   </header><!-- End Header -->
 
+
   <main id="main" style="background-color: #181925;">
 
-    <!-- ======= SONHOS SECTIO ======= -->
-    <section id="sonhos" class="sonhos">
+
+    <!-- ======= About Me Section ======= -->
+    <section id="about" class="about">
       <div class="container">
 
         <div class="section-title">
-          
-          <!--titulo-->
-          <span>SONHOS</span>
-          <h2>SONHOS</h2>
+          <!--TÍTULO-->
+          <span>QUEM SOU EU?</span>
+          <h2>QUEM SOU EU?</h2>
+          <!--ATÉ AQUI-->
 
           <!--sub-titulo-->
           <p>Uma menina bem chata, mas estudiosa e o kayky é o melhor :)</p>
@@ -93,31 +96,31 @@
                 Conta, como os outros, com Denzel Washington no centro de tudo, à frente de um elenco que inclui Dakota Fanning, David Denman e Eugenio Mastrandrea. PÚBLICO
               </p>
               <!--AQUI É ONDE ACABA O LUGAR DE COLOCAR O TEXTO-->
-
             </div>
           </div>
+               
+    </section><!-- End About Me Section -->
 
-  </main><!-- End #main -->
-
- <!-- ======= rodape ======= -->
- <footer id="footer">
-  <div class="container">
-    <h3>Ana Clara Ribeiro</h3>
-    <p>Uma menina muito chata.</p>
-    <div class="social-links">
-      <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-      <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-      <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-      <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+  <!-- ======= rodape ======= -->
+  <!-- ======= rodape ======= -->
+  <footer id="footer">
+    <div class="container">
+      <h3>Ana Clara Ribeiro</h3>
+      <p>Uma menina muito chata.</p>
+      <div class="social-links">
+        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+      </div>
+      <div class="copyright">
+        &copy; Copyright <strong><span>Kayky</span></strong>. All Rights Reserved
+      </div>
+      <div class="credits">
+        Designed by <a>KaykyLindo</a>
+      </div>
     </div>
-    <div class="copyright">
-      &copy; Copyright <strong><span>Kayky</span></strong>. All Rights Reserved
-    </div>
-    <div class="credits">
-      Designed by <a>KaykyLindo</a>
-    </div>
-  </div>
-</footer><!-- End Footer -->
+  </footer><!-- End Footer -->
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
