--- a/index.html
+++ b/index.html
@@ -47,15 +47,16 @@
           <ul>
             <li><a href="sonhos.html">SONHOS</a></li>
             <li><a href="medos.html">MEDOS</a></li>
+            <li><a href="meusmomentosefrases.html">MEUS MOMENTOS</a></li>
             <li class="dropdown"><a href="musica.html"><span>MUSICAS FAVS</span> <i class="bi bi-chevron-right"></i></a>
               <ul>
-                <li><a href="#">Drop Down 2</a></li>
-                <li><a href="#">Drop Down 3</a></li>
-                <li><a href="#">Drop Down 4</a></li>
+                <li><a href="#musica1">musica 1</a></li>
+                <li><a href="#musica2">musica 2</a></li>
+                <li><a href="#musica3">musica 3</a></li>
               </ul>
           </ul>
         </li>
-        <li><a class="nav-link scrollto" href="#resume">MINHA VISAO</a></li>
+        <li><a class="nav-link scrollto" href="minhavisao/atualidades.html">MINHA VISAO</a></li>
         <li><a class="nav-link scrollto" href="#services">literatura</a></li>
         <li><a class="nav-link scrollto" href="#services">noticias</a></li>
         <li><a class="nav-link scrollto" href="#services">escola</a></li>
