--- a/sonhos.html
+++ b/sonhos.html
@@ -36,8 +36,9 @@
 </head>
 
 <body>
-<!-- ======= Header ======= -->
-<header id="header" class="fixed-top d-flex justify-content-center align-items-center header-transparent">
+
+  <!-- ======= Header ======= -->
+  <header id="header" class="fixed-top d-flex justify-content-center align-items-center header-transparent">
 
     <nav id="navbar" class="navbar">
       <ul>
@@ -46,11 +47,12 @@
           <ul>
             <li><a href="sonhos.html">SONHOS</a></li>
             <li><a href="medos.html">MEDOS</a></li>
+            <li><a href="meusmomentosefrases.html">MEUS MOMENTOS</a></li>
             <li class="dropdown"><a href="musica.html"><span>MUSICAS FAVS</span> <i class="bi bi-chevron-right"></i></a>
               <ul>
-                <li><a href="#">Drop Down 2</a></li>
-                <li><a href="#">Drop Down 3</a></li>
-                <li><a href="#">Drop Down 4</a></li>
+                <li><a href="#musica1">musica 1</a></li>
+                <li><a href="#musica2">musica 2</a></li>
+                <li><a href="#musica3">musica 3</a></li>
               </ul>
           </ul>
         </li>
@@ -66,24 +68,18 @@
 
   </header><!-- End Header -->
 
-  
-
-  
-
   <main id="main" style="background-color: #181925;">
 
-          </div>
-
-
-        <!-- ======= MEDOS SECTION ======= -->
-    <section id="medo" class="medo">
+    <!-- ======= SONHOS SECTIO ======= -->
+    <section id="sonhos" class="sonhos">
       <div class="container">
 
-
         <div class="section-title">
+          
           <!--titulo-->
-          <span>MEDOS</span>
-          <h2>MEDOS</h2>
+          <span>SONHOS</span>
+          <h2>SONHOS</h2>
+
           <!--sub-titulo-->
           <p>Uma menina bem chata, mas estudiosa e o kayky é o melhor :)</p>
         </div>
@@ -98,8 +94,10 @@
                 Conta, como os outros, com Denzel Washington no centro de tudo, à frente de um elenco que inclui Dakota Fanning, David Denman e Eugenio Mastrandrea. PÚBLICO
               </p>
               <!--AQUI É ONDE ACABA O LUGAR DE COLOCAR O TEXTO-->
+
             </div>
           </div>
+
   </main><!-- End #main -->
 
  <!-- ======= rodape ======= -->
