atualização de abas3

--- a/medos.html
+++ b/medos.html
@@ -49,9 +49,9 @@
             <li><a href="meusmomentosefrases.html">MEUS MOMENTOS</a></li>
             <li class="dropdown"><a href="musica.html"><span>MUSICAS FAVS</span> <i class="bi bi-chevron-right"></i></a>
               <ul>
-                <li><a href="#musica1">musica 1</a></li>
-                <li><a href="#musica2">musica 2</a></li>
-                <li><a href="#musica3">musica 3</a></li>
+                <li><a href="#musica1">TE PROCURO</a></li>
+                <li><a href="#musica2">MY TEARS RICOCHET</a></li>
+                <li><a href="#musica3">SOMEONE TO STAY</a></li>
               </ul>
           </ul>
         </li>
