--- a/sonhos.html
+++ b/sonhos.html
@@ -42,7 +42,7 @@
 
     <nav id="navbar" class="navbar">
       <ul>
-        <li><a class="nav-link scrollto active" href="index.html">Inicio</a></li>
+        <li><a class="nav-link scrollto" href="index.html">Inicio</a></li>
         <li class="dropdown"><a href="quemsou.html"><span>QUEM SOU EU?</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
             <li><a href="sonhos.html">SONHOS</a></li>
@@ -60,7 +60,7 @@
         <li><a class="nav-link scrollto" href="#services">literatura</a></li>
         <li><a class="nav-link scrollto" href="#services">noticias</a></li>
         <li><a class="nav-link scrollto" href="#services">escola</a></li>
-        <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
+        <li><a class="nav-link scrollto" href="portfolio.html">Portfolio</a></li>
         
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
