--- a/musica.html
+++ b/musica.html
@@ -81,8 +81,11 @@
           <span>MUSICAS FAVORITAS</span>
           <h2>MUSICAS FAVORITAS</h2>
           <!--sub-titulo-->
-          <p>Uma menina bem chata, mas estudiosa e o kayky é o melhor :)</p>
+          
+
+          </p>
         </div>
+        <img src="musica.html" alt="">
         <div class="row">
           <div class="image col-lg-4 d-flex align-items-stretch justify-content-center justify-content-lg-start"></div>
           <div class="col-lg-8 d-flex flex-column align-items-stretch">
@@ -166,8 +169,10 @@
               </p>
 
                 <div class="interpretacao">
-                <p>Essa musica fala sobre </p>
+                <p>Essa música fala sobre  </p>
                 
+
+
             </div>
               <!--FINAL DA INPRETAÇÃO-->
             </div>
