--- a/quemsou.html
+++ b/quemsou.html
@@ -83,17 +83,19 @@
           <!--ATÉ AQUI-->
 
           <!--sub-titulo-->
-          <p>Uma menina bem chata, mas estudiosa e o kayky é o melhor :)</p>
+          <p></p>
         </div>
         <div class="row">
           <div class="image col-lg-4 d-flex align-items-stretch justify-content-center justify-content-lg-start"></div>
           <div class="col-lg-8 d-flex flex-column align-items-stretch">
             <div class="content ps-lg-4 d-flex flex-column justify-content-center">
               <!--AQUI É ONDE VC COLOCA O TEXTO-->
-              <p>Robert McCall, agente especializado que trabalhava para o governo americano e 
-                depois começou a lutar pelos oprimidos, vive agora no sul de Itália, longe dos Estados Unidos. Rapidamente faz novos amigos, mas começa a ver que a máfia controla inúmeros aspectos das suas vidas. É então que decide tornar-se, como fazia na sua terra natal,
-                um vigilante que defronta a poderosa organização criminosa. Este é o terceiro filme de acção da saga “The Equalizer”, realizada por Antoine Fuqua, que é uma adaptação livre da série homónima de televisão dos anos 1980 – uma saga que entretanto voltou também ao pequeno ecrã, com Queen Latifah.
-                Conta, como os outros, com Denzel Washington no centro de tudo, à frente de um elenco que inclui Dakota Fanning, David Denman e Eugenio Mastrandrea. PÚBLICO
+              <p>Olá! Meu nome é Ana Clara, tenho atualmente 16 anos. Minha cor favorita é o roxo, sou aquariana e estou cursando o 2º ano do Ensino Médio, além de estar no 2º Módulo do Técnico em Logística. Considero essa uma pergunta difícil de responder, mas espero que os leitores consigam conhecer um pouco mais sobre mim por meio deste texto e do meu portfólio. Bom, a palavra que melhor me define é indecisão, por isso não consigo me descrever com total precisão. Sou uma pessoa extrovertida, mas muitas vezes tímida. Me considero comunicativa, mas também gosto de ficar sozinha e, frequentemente, me isolo. Ainda não decidi qual profissão seguir, pois tenho interesse em muitas áreas, mas meu objetivo é conquistar minha independência financeira e trabalhar em algo que goste e que contribua para o bem das pessoas e do mundo de alguma forma.
+                Minha relação com minha família e amigos é geralmente positiva, embora haja desentendimentos, como em qualquer relacionamento. Eles desempenham um papel fundamental na minha vida, e sou extremamente grata por tê-los, independentemente das circunstâncias.
+                Daqui a 10 anos, espero estar trabalhando, construindo minha vida pessoal e profissional. Tenho o desejo de me tornar uma pessoa melhor, participar de trabalhos voluntários, visitar os lugares que sonho e me tornar vegetariana.
+                Honestamente, não sei o que dizer sobre a escola. Grande parte do que sou hoje é resultado das minhas experiências escolares, tanto as boas quanto as ruins. A escola, em parte, nos prepara para a vida, nos proporciona a oportunidade de conhecer pessoas que carregaremos conosco ao longo da vida e nos oferece experiências únicas. No entanto, também é desafiador lidar com a pressão que recai sobre nós, as expectativas em relação ao futuro, o medo de não ser aceito na faculdade dos nossos sonhos e muitas outras preocupações.
+                Enfim, espero ter conseguido expressar um pouco da minha opinião sobre esses assuntos e que vocês tenham me conhecido melhor :)
+                
               </p>
               <!--AQUI É ONDE ACABA O LUGAR DE COLOCAR O TEXTO-->
             </div>
@@ -106,7 +108,7 @@
   <footer id="footer">
     <div class="container">
       <h3>Ana Clara Ribeiro</h3>
-      <p>Uma menina muito chata.</p>
+      <p></p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
