--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top d-flex justify-content-center align-items-center header-transparent">
 
-    <nav id="navbar" class="navbar">
-      <ul>
-        <li><a class="nav-link scrollto" href="index.html">Inicio</a></li>
+    <nav id="navbar" class="navbar navbar-expand-sm">
+      <div class="container-fluid">
+      <ul class="navbar-nav">
+        <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
         <li class="dropdown"><a href="quemsou.html"><span>QUEM SOU EU?</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
             <li><a href="sonhos.html">SONHOS</a></li>
@@ -56,14 +57,15 @@
               </ul>
           </ul>
         </li>
-        <li><a class="nav-link scrollto" href="#resume">MINHA VISAO</a></li>
-        <li><a class="nav-link scrollto" href="#services">literatura</a></li>
-        <li><a class="nav-link scrollto" href="#services">noticias</a></li>
-        <li><a class="nav-link scrollto" href="#services">escola</a></li>
-        <li><a class="nav-link scrollto" href="portfolio.html">Portfolio</a></li>
+        <li class="nav-item"><a class="nav-link" href="#resume">MINHA VISAO</a></li>
+        <li><a class="nav-link" href="#services">literatura</a></li>
+        <li><a class="nav-link" href="#services">noticias</a></li>
+        <li><a class="nav-link" href="#services">escola</a></li>
+        <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
         
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
+    </div>
     </nav><!-- .navbar -->
 
   </header><!-- End Header -->
