--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
 
     <nav id="navbar" class="navbar">
       <ul>
-        <li><a class="nav-link scrollto" href="index.html">Inicio</a></li>
+        <li class="nav-item"><a class="nav-link active" href="index.html">Inicio</a></li>
         <li class="dropdown"><a href="quemsou.html"><span>QUEM SOU EU?</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
             <li><a href="sonhos.html">SONHOS</a></li>
@@ -55,11 +55,11 @@
               </ul>
           </ul>
         </li>
-        <li><a class="nav-link scrollto" href="#resume">MINHA VISAO</a></li>
-        <li><a class="nav-link scrollto" href="#services">literatura</a></li>
-        <li><a class="nav-link scrollto" href="#services">noticias</a></li>
-        <li><a class="nav-link scrollto" href="#services">escola</a></li>
-        <li><a class="nav-link scrollto" href="portfolio.html">Portfolio</a></li>
+        <li class="nav-item"><a class="nav-link" href="#resume">MINHA VISAO</a></li>
+        <li><a class="nav-link" href="#services">literatura</a></li>
+        <li><a class="nav-link" href="#services">noticias</a></li>
+        <li><a class="nav-link" href="#services">escola</a></li>
+        <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
         
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
