--- a/index.html
+++ b/index.html
@@ -46,22 +46,23 @@
         <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
         <li class="dropdown"><a href="quemsou.html"><span>QUEM SOU EU?</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
+            <li class="nav-item"><a class="nav-link active" href="index.html">Inicio</a></li>
+        <li class="dropdown"><a href="quemsou.html"><span>QUEM SOU EU?</span> <i class="bi bi-chevron-down"></i></a>
+          <ul>
             <li><a href="sonhos.html">SONHOS</a></li>
             <li><a href="medos.html">MEDOS</a></li>
-            <li><a href="meusmomentosefrases.html">MEUS MOMENTOS</a></li>
             <li class="dropdown"><a href="musica.html"><span>MUSICAS FAVS</span> <i class="bi bi-chevron-right"></i></a>
               <ul>
-                <li><a href="#musica1">TE PROCURO</a></li>
-                <li><a href="#musica2">MY TEARS RICOCHET</a></li>
-                <li><a href="#musica3">SOMEONE TO STAY</a></li>
+                <li><a href="#musica1">musica 1</a></li>
+                <li><a href="#musica2">musica 2</a></li>
+                <li><a href="#musica3">musica 3</a></li>
               </ul>
           </ul>
         </li>
-        <li class="nav-item"><a class="nav-link" href="#resume">MINHA VISAO</a></li>
-        <li><a class="nav-link" href="#services">literatura</a></li>
-        <li><a class="nav-link" href="#services">noticias</a></li>
-        <li><a class="nav-link" href="#services">escola</a></li>
-        <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
+        <li><a class="nav-link scrollto" href="minhavisao.html">MINHA VISAO</a></li>
+        <li><a class="nav-link scrollto" href="#services">literatura</a></li>
+        <li><a class="nav-link scrollto" href="#services">noticias</a></li>
+        <li><a class="nav-link scrollto " href="portfolio.html">Portfolio</a></li>
         
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
