atualizacao de portfolio e literatura

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Laura Bootstrap Template - Index</title>
+  <title>Portfolio Ana Clara</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/.png" rel="icon">
+  <link href="assets/img/anaclara2.jpeg" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -26,13 +26,6 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Laura
-  * Updated: Sep 18 2023 with Bootstrap v5.3.2
-  * Template URL: https://bootstrapmade.com/laura-free-creative-bootstrap-theme/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -55,7 +48,7 @@
           </ul>
         </li>
         <li><a class="nav-link scrollto" href="minhavisao.html">MINHA VISAO</a></li>
-        <li><a class="nav-link scrollto" href="#services">literatura</a></li>
+        <li><a class="nav-link scrollto" href="literatura.html">literatura</a></li>
         <li><a class="nav-link scrollto" href="#services">noticias</a></li>
         <li><a class="nav-link scrollto " href="portfolio.html">Portfolio</a></li>
         
@@ -83,6 +76,15 @@
 
       <div class="row portfolio-container">
 
+        <div class="col-lg-4 col-md-6 portfolio-item filter-familia">
+          <div class="portfolio-img"><img src="assets/img/portfolio/familia/familia (1).jpeg" class="img-fluid" alt=""></div>
+          <div class="portfolio-info">
+            <h4>Familia</h4>
+            <p>Familia</p>
+            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 1"><i class="bx bx-plus"></i></a>
+          </div>
+        </div>
+
         <div class="col-lg-4 col-md-6 portfolio-item filter-escola">
           <div class="portfolio-img"><img src="assets/img/portfolio/escola/escola1.jpeg" class="img-fluid" alt=""></div>
           <div class="portfolio-info">
@@ -101,6 +103,15 @@
           </div>
         </div>
 
+        <div class="col-lg-4 col-md-6 portfolio-item filter-familia">
+          <div class="portfolio-img"><img src="assets/img/portfolio/familia/familia (2).jpeg" class="img-fluid" alt=""></div>
+          <div class="portfolio-info">
+            <h4>Familia</h4>
+            <p>Familia</p>
+            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 2"><i class="bx bx-plus"></i></a>
+          </div>
+        </div>
+
         <div class="col-lg-4 col-md-6 portfolio-item filter-escola">
           <div class="portfolio-img"><img src="assets/img/portfolio/escola/escola2.jpeg" class="img-fluid" alt=""></div>
           <div class="portfolio-info">
@@ -116,6 +127,15 @@
             <h4>Amigos</h4>
             <p>Amigos</p>
             <a href="assets/img/portfolio/amigos/amigos3.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Amigos 2"><i class="bx bx-plus"></i></a>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-familia">
+          <div class="portfolio-img"><img src="assets/img/portfolio/familia/familia (3).jpeg" class="img-fluid" alt=""></div>
+          <div class="portfolio-info">
+            <h4>Familia</h4>
+            <p>Familia</p>
+            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 1"><i class="bx bx-plus"></i></a>
           </div>
         </div>
 
@@ -138,6 +158,15 @@
           </div>
         </div>
 
+        <div class="col-lg-4 col-md-6 portfolio-item filter-familia">
+          <div class="portfolio-img"><img src="assets/img/portfolio/familia/familia (4).jpeg" class="img-fluid" alt=""></div>
+          <div class="portfolio-info">
+            <h4>Familia</h4>
+            <p>Familia</p>
+            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 1"><i class="bx bx-plus"></i></a>
+          </div>
+        </div>
+
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-escola">
           <div class="portfolio-img"><img src="assets/img/portfolio/escola/escola4.jpeg" class="img-fluid" alt=""></div>
@@ -157,6 +186,15 @@
           </div>
         </div>
 
+        <div class="col-lg-4 col-md-6 portfolio-item filter-familia">
+          <div class="portfolio-img"><img src="assets/img/portfolio/familia/familia (5).jpeg" class="img-fluid" alt=""></div>
+          <div class="portfolio-info">
+            <h4>Familia</h4>
+            <p>Familia</p>
+            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 1"><i class="bx bx-plus"></i></a>
+          </div>
+        </div>
+
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-escola">
           <div class="portfolio-img"><img src="assets/img/portfolio/escola/escola5.jpeg" class="img-fluid" alt=""></div>
@@ -167,12 +205,30 @@
           </div>
         </div>
 
+        <div class="col-lg-4 col-md-6 portfolio-item filter-familia">
+          <div class="portfolio-img"><img src="assets/img/portfolio/familia/familia (6).jpeg" class="img-fluid" alt=""></div>
+          <div class="portfolio-info">
+            <h4>Familia</h4>
+            <p>Familia</p>
+            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 1"><i class="bx bx-plus"></i></a>
+          </div>
+        </div>
+
         <div class="col-lg-4 col-md-6 portfolio-item filter-amigos">
           <div class="portfolio-img"><img src="assets/img/portfolio/amigos/amigos5.jpeg" class="img-fluid" alt=""></div>
           <div class="portfolio-info">
             <h4>Amigos</h4>
             <p>Amigos</p>
             <a href="assets/img/portfolio/amigos/amigos5.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Amigos 5"><i class="bx bx-plus"></i></a>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-familia">
+          <div class="portfolio-img"><img src="assets/img/portfolio/familia/familia (7).jpeg" class="img-fluid" alt=""></div>
+          <div class="portfolio-info">
+            <h4>Familia</h4>
+            <p>Familia</p>
+            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 1"><i class="bx bx-plus"></i></a>
           </div>
         </div>
 
@@ -195,6 +251,15 @@
           </div>
         </div>
 
+        <div class="col-lg-4 col-md-6 portfolio-item filter-familia">
+          <div class="portfolio-img"><img src="assets/img/portfolio/familia/familia (8).jpeg" class="img-fluid" alt=""></div>
+          <div class="portfolio-info">
+            <h4>Familia</h4>
+            <p>Familia</p>
+            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 1"><i class="bx bx-plus"></i></a>
+          </div>
+        </div>
+
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-escola">
           <div class="portfolio-img"><img src="assets/img/portfolio/escola/escola7.jpeg" class="img-fluid" alt=""></div>
@@ -211,6 +276,15 @@
             <h4>Amigos</h4>
             <p>Amigos</p>
             <a href="assets/img/portfolio/amigos/amigos7.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Amigos 7"><i class="bx bx-plus"></i></a>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-familia">
+          <div class="portfolio-img"><img src="assets/img/portfolio/familia/familia (9).jpeg" class="img-fluid" alt=""></div>
+          <div class="portfolio-info">
+            <h4>Familia</h4>
+            <p>Familia</p>
+            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 1"><i class="bx bx-plus"></i></a>
           </div>
         </div>
 
@@ -233,6 +307,15 @@
           </div>
         </div>
 
+        <div class="col-lg-4 col-md-6 portfolio-item filter-familia">
+          <div class="portfolio-img"><img src="assets/img/portfolio/familia/familia (10).jpeg" class="img-fluid" alt=""></div>
+          <div class="portfolio-info">
+            <h4>Familia</h4>
+            <p>Familia</p>
+            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 1"><i class="bx bx-plus"></i></a>
+          </div>
+        </div>
+
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-escola">
           <div class="portfolio-img"><img src="assets/img/portfolio/escola/escola9.jpeg" class="img-fluid" alt=""></div>
@@ -249,6 +332,15 @@
             <h4>Amigos</h4>
             <p>Amigos</p>
             <a href="assets/img/portfolio/amigos/amigos9.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Amigos 9"><i class="bx bx-plus"></i></a>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-familia">
+          <div class="portfolio-img"><img src="assets/img/portfolio/familia/familia (11).jpeg" class="img-fluid" alt=""></div>
+          <div class="portfolio-info">
+            <h4>Familia</h4>
+            <p>Familia</p>
+            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 1"><i class="bx bx-plus"></i></a>
           </div>
         </div>
 
@@ -271,6 +363,15 @@
           </div>
         </div>
 
+        <div class="col-lg-4 col-md-6 portfolio-item filter-familia">
+          <div class="portfolio-img"><img src="assets/img/portfolio/familia/familia (12).jpeg" class="img-fluid" alt=""></div>
+          <div class="portfolio-info">
+            <h4>Familia</h4>
+            <p>Familia</p>
+            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 1"><i class="bx bx-plus"></i></a>
+          </div>
+        </div>
+
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-escola">
           <div class="portfolio-img"><img src="assets/img/portfolio/escola/escola11.jpeg" class="img-fluid" alt=""></div>
@@ -287,6 +388,15 @@
             <h4>Amigos</h4>
             <p>Amigos</p>
             <a href="assets/img/portfolio/amigos/amigos11.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Amigos 11"><i class="bx bx-plus"></i></a>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-familia">
+          <div class="portfolio-img"><img src="assets/img/portfolio/familia/familia (13).jpeg" class="img-fluid" alt=""></div>
+          <div class="portfolio-info">
+            <h4>Familia</h4>
+            <p>Familia</p>
+            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 1"><i class="bx bx-plus"></i></a>
           </div>
         </div>
 
@@ -309,6 +419,15 @@
           </div>
         </div>
 
+        <div class="col-lg-4 col-md-6 portfolio-item filter-familia">
+          <div class="portfolio-img"><img src="assets/img/portfolio/familia/familia (14).jpeg" class="img-fluid" alt=""></div>
+          <div class="portfolio-info">
+            <h4>Familia</h4>
+            <p>Familia</p>
+            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 1"><i class="bx bx-plus"></i></a>
+          </div>
+        </div>
+
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-escola">
           <div class="portfolio-img"><img src="assets/img/portfolio/escola/escola13.jpeg" class="img-fluid" alt=""></div>
@@ -325,6 +444,15 @@
             <h4>Amigos</h4>
             <p>Amigos</p>
             <a href="assets/img/portfolio/amigos/amigos14.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Amigos 14"><i class="bx bx-plus"></i></a>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-familia">
+          <div class="portfolio-img"><img src="assets/img/portfolio/familia/familia (15).jpeg" class="img-fluid" alt=""></div>
+          <div class="portfolio-info">
+            <h4>Familia</h4>
+            <p>Familia</p>
+            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 1"><i class="bx bx-plus"></i></a>
           </div>
         </div>
 
@@ -347,6 +475,15 @@
           </div>
         </div>
 
+        <div class="col-lg-4 col-md-6 portfolio-item filter-familia">
+          <div class="portfolio-img"><img src="assets/img/portfolio/familia/familia (16).jpeg" class="img-fluid" alt=""></div>
+          <div class="portfolio-info">
+            <h4>Familia</h4>
+            <p>Familia</p>
+            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 1"><i class="bx bx-plus"></i></a>
+          </div>
+        </div>
+
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-escola">
           <div class="portfolio-img"><img src="assets/img/portfolio/escola/escola15 (1).jpeg" class="img-fluid" alt=""></div>
@@ -363,6 +500,15 @@
             <h4>Amigos</h4>
             <p>Amigos</p>
             <a href="assets/img/portfolio/amigos/amigos16.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Amigos 16"><i class="bx bx-plus"></i></a>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-familia">
+          <div class="portfolio-img"><img src="assets/img/portfolio/familia/familia (17).jpeg" class="img-fluid" alt=""></div>
+          <div class="portfolio-info">
+            <h4>Familia</h4>
+            <p>Familia</p>
+            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 1"><i class="bx bx-plus"></i></a>
           </div>
         </div>
 
@@ -385,6 +531,15 @@
           </div>
         </div>
 
+        <div class="col-lg-4 col-md-6 portfolio-item filter-familia">
+          <div class="portfolio-img"><img src="assets/img/portfolio/familia/familia (18).jpeg" class="img-fluid" alt=""></div>
+          <div class="portfolio-info">
+            <h4>Familia</h4>
+            <p>Familia</p>
+            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 1"><i class="bx bx-plus"></i></a>
+          </div>
+        </div>
+
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-escola">
           <div class="portfolio-img"><img src="assets/img/portfolio/escola/escola17.jpeg" class="img-fluid" alt=""></div>
@@ -404,12 +559,30 @@
           </div>
         </div>
 
+        <div class="col-lg-4 col-md-6 portfolio-item filter-familia">
+          <div class="portfolio-img"><img src="assets/img/portfolio/familia/familia (19).jpeg" class="img-fluid" alt=""></div>
+          <div class="portfolio-info">
+            <h4>Familia</h4>
+            <p>Familia</p>
+            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 1"><i class="bx bx-plus"></i></a>
+          </div>
+        </div>
+
         <div class="col-lg-4 col-md-6 portfolio-item filter-amigos">
           <div class="portfolio-img"><img src="assets/img/portfolio/amigos/amigos19.jpeg" class="img-fluid" alt=""></div>
           <div class="portfolio-info">
             <h4>Amigos</h4>
             <p>Amigos</p>
             <a href="assets/img/portfolio/amigos/amigos19.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Amigos 19"><i class="bx bx-plus"></i></a>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-familia">
+          <div class="portfolio-img"><img src="assets/img/portfolio/familia/familia (20).jpeg" class="img-fluid" alt=""></div>
+          <div class="portfolio-info">
+            <h4>Familia</h4>
+            <p>Familia</p>
+            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 1"><i class="bx bx-plus"></i></a>
           </div>
         </div>
 
@@ -422,12 +595,30 @@
           </div>
         </div>
 
+        <div class="col-lg-4 col-md-6 portfolio-item filter-familia">
+          <div class="portfolio-img"><img src="assets/img/portfolio/familia/familia (21).jpeg" class="img-fluid" alt=""></div>
+          <div class="portfolio-info">
+            <h4>Familia</h4>
+            <p>Familia</p>
+            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 1"><i class="bx bx-plus"></i></a>
+          </div>
+        </div>
+
         <div class="col-lg-4 col-md-6 portfolio-item filter-amigos">
           <div class="portfolio-img"><img src="assets/img/portfolio/amigos/amigos21.jpeg" class="img-fluid" alt=""></div>
           <div class="portfolio-info">
             <h4>Amigos</h4>
             <p>Amigos</p>
             <a href="assets/img/portfolio/amigos/amigos21.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Amigos 21"><i class="bx bx-plus"></i></a>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-familia">
+          <div class="portfolio-img"><img src="assets/img/portfolio/familia/familia (22).jpeg" class="img-fluid" alt=""></div>
+          <div class="portfolio-info">
+            <h4>Familia</h4>
+            <p>Familia</p>
+            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 1"><i class="bx bx-plus"></i></a>
           </div>
         </div>
 
