--- a/sonhos.html
+++ b/sonhos.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Laura Bootstrap Template - Index</title>
+  <title>Portfolio Ana Clara</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/.png" rel="icon">
+  <link href="assets/img/anaclara2.jpeg" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -26,19 +26,11 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Laura
-  * Updated: Sep 18 2023 with Bootstrap v5.3.2
-  * Template URL: https://bootstrapmade.com/laura-free-creative-bootstrap-theme/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
-
-  <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top d-flex justify-content-center align-items-center header-transparent">
+<!-- ======= Header ======= -->
+<header id="header" class="fixed-top d-flex justify-content-center align-items-center header-transparent">
 
     <nav id="navbar" class="navbar">
       <ul>
@@ -56,7 +48,7 @@
           </ul>
         </li>
         <li><a class="nav-link scrollto" href="minhavisao.html">MINHA VISAO</a></li>
-        <li><a class="nav-link scrollto" href="#services">literatura</a></li>
+        <li><a class="nav-link scrollto" href="literatura.html">literatura</a></li>
         <li><a class="nav-link scrollto" href="#services">noticias</a></li>
         <li><a class="nav-link scrollto " href="portfolio.html">Portfolio</a></li>
         
